@@ -71,7 +71,5 @@ IF (WebKit_LINK_FLAGS)
     ADD_TARGET_PROPERTIES(${WebKit_LIBRARY_NAME} LINK_FLAGS "${WebKit_LINK_FLAGS}")
 ENDIF ()
 
-IF (SHARED_CORE)
-    SET_TARGET_PROPERTIES(${WebKit_LIBRARY_NAME} PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
-    INSTALL(TARGETS ${WebKit_LIBRARY_NAME} DESTINATION lib)
-ENDIF ()
+SET_TARGET_PROPERTIES(${WebKit_LIBRARY_NAME} PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
+INSTALL(TARGETS ${WebKit_LIBRARY_NAME} DESTINATION lib)
